# Zomato-restaurant-selector

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
Docs/: Problemstatement.md  phase-wise-architecture.md
data/processed/: restaurants.parquet
scripts/: ingest_zomato.py  test_phase3_groq.py  test_phase4_api.py
src/restaurant_rec/: config.py
src/restaurant_rec/phase1/: ingest.py  schema.py  transform.py  validate.py
src/restaurant_rec/phase2/: __init__.py  catalog_loader.py  filter.py  preferences.py
src/restaurant_rec/phase3/: __init__.py  groq_client.py  parser.py  prompt.py  recommend.py
src/restaurant_rec/phase4/: app.py
web/: app.js  index.html  styles.css
web-next/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web-next/app/: globals.css  layout.tsx  page.tsx
web-next/components/: Header.tsx  QueryBar.tsx  RefineInput.tsx  RefineSidebar.tsx  RestaurantCard.tsx
web-next/lib/: api.ts  persistence.ts  types.ts
